# TicketSync

./: .gitignore  Dockerfile.test  README.md  pyproject.toml
.github/workflows/: ci.yml  publish.yml
docs/: ADAPTERS.md  ARCHITECTURE.md  CONTRIBUTING.md  _config.yml  index.md
tests/: conftest.py  test_adapter_local.py  test_adapters_cloudwatch.py  test_adapters_github.py  test_adapters_guardduty.py  test_adapters_opscenter.py  test_adapters_securityhub.py  test_adversarial.py  test_config.py  test_engine.py  test_hello.py  test_integration_aws.py  test_integration_github.py  test_metadata.py  test_models.py  test_roundtrip.py  test_version.py
tests/adapters/: test_cloudwatch.py  test_factory.py  test_github.py  test_jira.py  test_pagerduty.py
tests/fixtures/: cloudwatch_alarm.json  github_issue.json  opscenter_opsitem.json
ticket_sync/: __init__.py  models.py  version.py
ticket_sync/adapters/: __init__.py  base.py  cloudwatch.py  github.py  jira.py  pagerduty.py
ticketsync/: __init__.py  adapter.py  config.py  engine.py  metadata.py  models.py
ticketsync/adapters/: __init__.py  cloudwatch_alarms.py  github_issues.py  guardduty.py  local.py  opscenter.py  securityhub.py
