[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ticketsync"
version = "0.1.1"
description = "TicketSync — bidirectional ticket synchronization across ITSM systems"
readme = "README.md"
license = { text = "Apache-2.0" }
requires-python = ">=3.10"
authors = [
    { name = "Leonardo Santiago Benitez Pereira", email = "lsbenitezpereira@gmail.com" },
]
keywords = ["itsm", "tickets", "sync", "automation", "jira", "servicenow"]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = []

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "mypy>=1.0",
]

[project.urls]
Homepage = "https://github.com/Libre-Ticket-Suite/TicketSync"
Repository = "https://github.com/Libre-Ticket-Suite/TicketSync"

[tool.hatch.build.targets.wheel]
packages = ["ticketsync"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.mypy]
strict = true
ignore_missing_imports = true
