[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ticketsync"
version = "0.3.0"
description = "TicketSync — bidirectional ticket synchronization across ITSM systems"
readme = "README.md"
license = { text = "Apache-2.0" }
requires-python = ">=3.10"
authors = [
    { name = "Leonardo Santiago Benitez Pereira", email = "lsbenitezpereira@gmail.com" },
]
keywords = ["itsm", "tickets", "sync", "automation", "jira", "servicenow", "opscenter"]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "pydantic>=2.0",
    "PyYAML>=6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "mypy>=1.0",
    "pytest-timeout>=2.0",
    "types-PyYAML",
]
integration = [
    "boto3>=1.26",
    "boto3-stubs[cloudwatch,ssm,guardduty,securityhub]>=1.26",
    "httpx>=0.24",
]

[project.urls]
Homepage = "https://github.com/LeonardoSanBenitez/TicketSync"
Repository = "https://github.com/LeonardoSanBenitez/TicketSync"

[tool.hatch.build.targets.wheel]
packages = ["ticketsync"]

[tool.pytest.ini_options]
testpaths = ["tests"]
timeout = 120
markers = [
    "integration: marks tests as requiring real AWS/GitHub credentials (deselect with '-m not integration')",
]

[tool.mypy]
strict = true
ignore_missing_imports = true
